# Voxel-Editor

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  README.md  VoxelEditor.sln
.github/workflows/: check.yml
VoxelEditor/: VoxelEditor.vcxproj  VoxelEditor.vcxproj.filters  imgui.ini
VoxelEditor/src/: InputManager.cpp  InputManager.h  ShaderLoader.cpp  ShaderLoader.h  fragmentShader.txt  glad.c  main.cpp  vertexShader.txt
VoxelEditor/src/Entity/: Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h
VoxelEditor/src/Entity/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  MeshRendererComponent.h  TransformComponent.cpp  TransformComponent.h
VoxelEditor/src/Rendering/: EntityRenderer.cpp  EntityRenderer.h  FrameBuffer.cpp  FrameBuffer.h  RawModel.cpp  RawModel.h  ShaderLoader.cpp  ShaderLoader.h
VoxelEditor/src/Shaders/: fragmentFramebuffer.txt  vertexFramebuffer.txt  vertexShader.txt
resources/shaders/: fragment.frag  vertex.vert
src/: Application.cpp  Application.h  InputManager.cpp  InputManager.h  main.cpp
src/Entity/: Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h
src/Entity/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  MeshRendererComponent.cpp  MeshRendererComponent.h  TransformComponent.cpp  TransformComponent.h
src/Rendering/: EntityRenderer.cpp  EntityRenderer.h  FrameBuffer.cpp  FrameBuffer.h  RawModel.cpp  RawModel.h  ShaderLoader.cpp  ShaderLoader.h
src/UI/: MainUI.cpp  MainUI.h
src/Voxel/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  EditorSettings.h  InputManager.cpp  InputManager.h  Log.cpp  Log.h  main.cpp  pch.h
src/Voxel/ECS/: ComponentStorage.h  EditorRenderable.h  Entity.h  EntityRegistry.cpp  EntityRegistry.h  View.h
src/Voxel/ECS/Components/: HierarchyComponent.h  MeshComponent.h  MetaComponent.h  TransformComponent.h
src/Voxel/ECS/Systems/: RenderSystem.cpp  RenderSystem.h  TransformSystem.cpp  TransformSystem.h  VisibilitySystem.cpp  VisibilitySystem.h
src/Voxel/Entity/: Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h
src/Voxel/Entity/Components/: Component.h  MeshRendererComponent.cpp  MeshRendererComponent.h  TransformComponent.cpp  TransformComponent.h
src/Voxel/Event/: Event.h
src/Voxel/Input/: InputActions.h  InputManager.cpp  InputManager.h
src/Voxel/Log/: Log.cpp  Log.h  LogSink.h  Profiler.h  ScopedTimer.h
src/Voxel/Rendering/: EntityRenderer.cpp  EntityRenderer.h  FrameBuffer.cpp  FrameBuffer.h  RawModel.cpp  RawModel.h  RawModelRenderer.cpp  RawModelRenderer.h  ShaderLoader.cpp  ShaderLoader.h
src/Voxel/UI/: MainUI.cpp  MainUI.h  MenuBar.h  UIPanel.h  UIStyle.h
src/Voxel/UI/Panels/: ComponentPanel.h  HierarchyPanel.h  LogPanel.h  ProfilingPanel.h  PropertiesPanel.h  ViewportPanel.h
